Closed
Bug 286299
Opened 21 years ago
Closed 21 years ago
extensions or themes installed in Firefox 1.0.x don't appear on 1st launch of trunk build
Categories
(Toolkit :: Add-ons Manager, defect)
Toolkit
Add-ons Manager
Tracking
()
RESOLVED
FIXED
People
(Reporter: bugzilla, Assigned: benjamin)
Details
(Whiteboard: [to examine after EM upgrade])
Attachments
(1 file, 1 obsolete file)
|
1.67 KB,
patch
|
darin.moz
:
review+
chofmann
:
approval-aviary1.1a1+
|
Details | Diff | Splinter Review |
found using 2005031509-trunk firefox bits on mac os x 10.3.8. this would be
confusing, I believe, when users first use the trunk build after having used 1.0
for so long.
1. create a fresh profile with Firefox 1.0 and launch.
2. install an extension: eg, I used ForecastFox v0.7 and WebDeveloper v0.8
3. quit and restart Firefox 1.0, to ensure that the extension was properly
installed.
4. quit Firefox 1.0.
5. launch Firefox trunk build.
results: I noticed that the UI associated with the extensions I used was no
longer present --both ForecastFox and WebDeveloper are popular extensions whose
UI are hard to miss. :)
6. open the Extensions dialog: the extension appears to be listed as active, but...
7. bring up the context menu and select About...
results: nothing happens.
8. try to dismiss the Exensions dialog (cmd+W or Esc).
results: the Extensions dialog doesn't go away.
I'm able to quit Firefox (cmd+Q), and if I restart the trunk build for 2nd time,
the extension is somehow active.
| Reporter | ||
Comment 1•21 years ago
|
||
also occurs with a similar recipe:
1. create a fresh profile with ffox 1.0.2RC (20050317-1.0.2), installed a couple
of extensions (Adblock and Remove It Permanently).
2. quit and restarted ffox 1.0.2 to ensure that the extensions installed fine.
3. quit ffox 1.0.2, then started with today's 20050320-trunk ffox build.
results: again, extensions listed in Extensions dialog, but inactive in UI.
| Reporter | ||
Comment 2•21 years ago
|
||
I can also reproduce this with themes. in addition, this also occurs in
Thunderbird (tested on linux fc3, 20050324-trunk).
a good theme to test is Charamel, which is available for both ffox and tbird:
http://members.shaw.ca/lucx/
Flags: blocking-aviary1.1?
OS: MacOS X → All
Hardware: Macintosh → All
Summary: extensions installed in Firefox 1.0 don't appear on 1st launch of trunk build → extensions or themes installed in Firefox or Thunderbird 1.0.x don't appear on 1st launch of trunk build
| Assignee | ||
Updated•21 years ago
|
QA Contact: bugs → benjamin
Whiteboard: [to examine after EM upgrade]
| Reporter | ||
Comment 3•21 years ago
|
||
Benjamin, when is the EM upgrade supposed to occur? (feel free to email me
directly about this.)
the behavior of this issue has changed somewhat --not sure if it's a different
bug, but I'll include what I see here for now.
setup: fedora core 3; testing with ffox 1.0.3 (installed as part of the fedora
updating service; it's the default browser) and ffox 2005051306-trunk build.
1. create a new profile with ffox 1.0.3.
2. after launching new profile, manually install some extensions: I did this by
using File > Open to open and launch .xpi's I had downloaded locally. I used
Adblock 0.5.2.039 and ForecastFox 0.7.1.
3. quit and restart ffox 1.0.3 to ensure that the extensions were properly
installed and active.
4. quit ffox 1.0.3; launch 2005051306-trunk ffox build with the same profile.
results: neither Adblock nor ForecastFox were active. in fact, when I check the
Extensions manager dialog, Adblock is labeled as "will become active after
restarting" and ForecastFox is no longer listed. restarting doesn't activate
Adblock either. weird.
| Assignee | ||
Comment 4•21 years ago
|
||
The EM rewrite landed about a week ago; we're still in the process of cleaning
up regressions from that. It would be good if you could look in the JS console
the first time you launch a trunk build after the 1.0.x build and see whether
any interesting errors appear there.
| Reporter | ||
Comment 5•21 years ago
|
||
sorry, this has morphed again --now extensions are disappearing. here is a
recipe with the js console errors.
1. start with a fresh ffox 1.0.4 profile.
2. install Adblock 0.5.2.039 and restart ffox 1.0.4 to ensure that Adblock is
active.
3. quit ffox 1.0.4.
4. start deer park 2005052707-trunk.
results: Adblock no longer appears in the chrome. in fact, Adblock is not listed
at all in the Extensions dialog.
js console output:
Item Installed via directory addition to Install Location: app-profile Item ID:
{34274bf4-1d97-a289-e984-17e546307e4f}, attempting to register...
Item Installed/Upgraded at Install Location: app-profile Item ID:
{34274bf4-1d97-a289-e984-17e546307e4f}, attempting to register...
... failure, item is not compatible, error: Incompatible Version
Item Installed via directory addition to Install Location: app-profile Item ID:
{972ce4c6-7e08-4474-a285-3208198ce6fd}, attempting to register...
Item Installed/Upgraded at Install Location: app-profile Item ID:
{972ce4c6-7e08-4474-a285-3208198ce6fd}, attempting to register...
... failure, item is not compatible, error: Incompatible Version
it's interesting that the Extension manager doesn't list Adblock with the
"extension not compatible" message. why is that?
| Reporter | ||
Comment 6•21 years ago
|
||
Comment 7•21 years ago
|
||
(In reply to comment #5)
> sorry, this has morphed again --now extensions are disappearing. here is a
> recipe with the js console errors.
That is bug 293419
Updated•21 years ago
|
Flags: blocking1.8b2+
| Assignee | ||
Comment 8•21 years ago
|
||
Asa, why is this a 1.1a1 blocker?
| Assignee | ||
Comment 9•21 years ago
|
||
I think that this bug is being caused by my environment var which prevents
infinite recursion: AFAICT the extension manager expects to restart *twice*:
startup 0: detects that upgrade is happening, notices that we need to install
extensions
restart 1: installs extensions and notifies the startup code that it wants to
restart *again*, but the startup code forcefully prevents this
(restart 2 would work correctly)
We have two solutions I can see:
A: install the extensions during startup 0 instead of 1
B: modify the envvar recursion checking to allow two restarts (but not more)
Darin, Robert: any suggestions which option would be better or more expedient?
Assignee: bugs → nobody
| Assignee | ||
Comment 10•21 years ago
|
||
Per discussion with darin, allow two restarts.
Assignee: nobody → benjamin
Status: NEW → ASSIGNED
Attachment #184940 -
Flags: review?(darin)
Attachment #184940 -
Flags: approval-aviary1.1a1?
| Assignee | ||
Comment 11•21 years ago
|
||
Argh, the if-test was reversed and wouldn't work properly.
Attachment #184940 -
Attachment is obsolete: true
Attachment #184941 -
Flags: review?(darin)
Attachment #184941 -
Flags: approval-aviary1.1a1?
| Assignee | ||
Updated•21 years ago
|
Attachment #184940 -
Flags: review?(darin)
Attachment #184940 -
Flags: approval-aviary1.1a1?
Comment 12•21 years ago
|
||
Comment on attachment 184941 [details] [diff] [review]
Allow two restarts, rev. 2
>Index: toolkit/xre/nsAppRunner.cpp
>+ if (noEMRestart && *noEMRestart && *noEMRestart != '0') {
how about this instead:
if (noEMRestart && *noEMRestart == "1") {
r=darin
Attachment #184941 -
Flags: review?(darin) → review+
Comment 13•21 years ago
|
||
I meant to use single quotes around |1| of course :)
Comment 14•21 years ago
|
||
lets see if this can fix adblock and a few others for a1
Comment 15•21 years ago
|
||
Comment on attachment 184941 [details] [diff] [review]
Allow two restarts, rev. 2
a=chofmann for a1
Attachment #184941 -
Flags: approval-aviary1.1a1? → approval-aviary1.1a1+
| Assignee | ||
Comment 16•21 years ago
|
||
Fixed on trunk for 1.1a1.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox1.1
Comment 17•21 years ago
|
||
wouldn't it be nicer + faster to avoid the 2nd startup?
| Assignee | ||
Comment 18•21 years ago
|
||
Yes it would, but it involves some rather significant changes to make the EM
install extensions "right now" instead of "at next startup".
Target Milestone: Firefox1.1 → ---
| Reporter | ||
Comment 19•21 years ago
|
||
tested with 2005053113-trunk on linux fc3:
0. with a fresh profile created in ffox 1.0.4, run ffox 1.0.4.
1. installed a theme and switched to use it (Charamel 1.1.2), as well as 3
extensions (all installed from UMO), ForecastFox, Adblock and PDF Download.
2. quit and restarted ffox 1.0.4 to ensure the theme and extensions worked.
3. quit ffox 1.0.4. start DP 2005053113-trunk.
results:
- Charamel was no longer active *and* no longer listed in the Themes dialog.
- Adblock and ForecastFox were labeled as incompatible, thus disabled, in the
Extensions dialog (required 1.0+).
- PDF Download was compatible, thus enabled.
| Reporter | ||
Comment 20•21 years ago
|
||
(In reply to comment #19)
> results:
> - Charamel was no longer active *and* no longer listed in the Themes dialog.
to clarify: I restarted with DP (again), Charamel was still missing. so, I
installed Charamel, which DP allowed me to do --however, the "use theme" button
remained disabled, implying that the version of Charamel was not compatible with DP.
Comment 21•21 years ago
|
||
(In reply to comment #19)
> tested with 2005053113-trunk on linux fc3:
>
> 0. with a fresh profile created in ffox 1.0.4, run ffox 1.0.4.
>
> 1. installed a theme and switched to use it (Charamel 1.1.2), as well as 3
> extensions (all installed from UMO), ForecastFox, Adblock and PDF Download.
>
> 2. quit and restarted ffox 1.0.4 to ensure the theme and extensions worked.
>
> 3. quit ffox 1.0.4. start DP 2005053113-trunk.
>
> results:
> - Charamel was no longer active *and* no longer listed in the Themes dialog.
> - Adblock and ForecastFox were labeled as incompatible, thus disabled, in the
> Extensions dialog (required 1.0+).
> - PDF Download was compatible, thus enabled.
The patch that allowed incompatible extensions to show as incompatible is from
bug 293419
Was the default theme listed in the Themes Manager after you upgraded to Deer
Park? I ask because I am unsure of all of the symptoms from bug 295855 and
Charamel not showing may be another symptom of bug 295855.
This patch should allow chrome registration to finish and thereby allow
selecting options (e.g. the extension is operational) of an extension on first
launch when upgrading to Deer Park with an existing profile.
| Reporter | ||
Comment 22•21 years ago
|
||
(In reply to comment #21)
> Was the default theme listed in the Themes Manager after you upgraded to Deer
> Park? I ask because I am unsure of all of the symptoms from bug 295855 and
> Charamel not showing may be another symptom of bug 295855.
yes, the default theme is listed in the Themes Manager, but oddly it is
disabled. here's the recipe I used:
0. create fresh profile in ffox 1.0.4 and launch 1.0.4 --as expected the default
theme is listed and active there.
1. quit ffox 1.0.4. start same profile in deer park 2005053113-trunk.
2. go to Themes Manager.
| Reporter | ||
Comment 23•21 years ago
|
||
forgot to note in comment 22, I checked the JS console, but it didn't have any info.
in addition, I tried creating a fresh profile with deer park 2005053113-trunk,
and interestingly the Themes Manager does *not* list the default theme as
disabled --it's listed there as active.
Comment 24•21 years ago
|
||
Thanks sairuh - the default theme being disabled does sound like another symptom
of bug 295855. In my case it didn't display at all which surprised me since it
was actually incompatible due to it using the previous versions install.rdf that
was abandoned as described in bug 295855. So, it is quite possible that the
issue with Charamel would be fixed by the patch in bug 295855.
Comment 25•21 years ago
|
||
In addition to comment #24. I should have realized it wouldn't have displayed as
disabled without the patch for bug 293419. Instead of not displaying it and
trying to register it in the profile directory it now successfully registers it
instead of just not displaying any default theme at all. I thtink the pattch in
bug 295855 is going to be necessary for 1.1a otherwise the default theme is
going to come up as disabled.
Comment 26•21 years ago
|
||
bug 295855 does fix the default theme issue but it doesn't fix the issue with
Charamel. I also noticed that Charamel 1.1.2 doesn't support the new options
window even though it has a maxVersion of 1.0+ - with the theme changes required
I think it is appropriate to force a re-install of any themes at this time if
for no other reason than it appears that at least some themes will advertise
themselves as updated when they aren't. Perhaps when we are closer to 1.1 and
more themes are really updated code can be added to migrate existing themes to
the 1.1 profile.
| Reporter | ||
Comment 27•21 years ago
|
||
unfortunately, this bug stills occurs for Thunderbird. should I reopen this, or
spin off a new bug?
recipe
------
1. created fresh profile with Tbird 1.0.2.
2. installed Flashgot and Timestamp extensions from UMO.
3. installed and selected to use the Charamel theme.
4. restarted Tbird 1.0.2 to confirm that the extensions and theme worked fine.
5. started 2005061505-trunk Tbird build (tested on Mac OS X 10.4.1).
results: got the update wizard, went through that (no updates found, actually).
once Tbird trunk started up:
* both extensions were listed as active, but their chrome/UI were actually not
active at all.
* the default Pinstripe theme was used, not Charamel.
once I restarted the trunk build, the extensions and theme became active.
| Assignee | ||
Comment 28•21 years ago
|
||
Jeez, that sucks: does anyone have clues why we would need more than two restarts?
| Reporter | ||
Comment 29•21 years ago
|
||
spun off the thunderbird-specific issue (comment 27) in bug 297956.
Summary: extensions or themes installed in Firefox or Thunderbird 1.0.x don't appear on 1st launch of trunk build → extensions or themes installed in Firefox 1.0.x don't appear on 1st launch of trunk build
Updated•21 years ago
|
Flags: blocking-aviary1.1?
Updated•18 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•