Bug 286299 - When upgrading, we need to allow *two* restarts instead of one: r=darin a=chofmann